# test_project_dj4_0

./: .gitignore  pyproject.toml
test_project_dj4_0/: manage.py  pytest.ini
test_project_dj4_0/my_app/: admin.py  busines_logik.py  models.py  tables.py  urls.py  views.py
test_project_dj4_0/my_app/management/commands/: fill_fake_db.py
test_project_dj4_0/my_app/static/css/: my_style.css
test_project_dj4_0/my_app/templates/my_app_main/: client_list.html
test_project_dj4_0/my_app/templates/my_app_main/layout/: basic.html
test_project_dj4_0/my_app/templates/registration/: login.html
test_project_dj4_0/test_project_dj4_0/: asgi.py  settings.py  urls.py  wsgi.py
test_project_dj4_0/tests/: conftest.py  test_command.py  test_fabric.py  test_view.py  test_view_example.py
test_project_dj4_0/tests/fixtures/: factory.py
